# app/src/main/kotlin/no/nav/omsorgsdager/kronisksyktbarn/dto/LøsKroniskSyktBarnBehov.kt
@@ -3,9 +3,9 @@ package no.nav.omsorgsdager.kronisksyktbarn.dto
 import com.fasterxml.jackson.annotation.JsonProperty
 import no.nav.omsorgsdager.Fritekst
 import no.nav.omsorgsdager.Json.Companion.somJson
-import no.nav.omsorgsdager.aksjonspunkt.LøstAksjonpunkt
+import no.nav.omsorgsdager.behov.LøstBehov
 
-internal object LøsKroniskSyktBarnAksjonspunkt {
+internal object LøsKroniskSyktBarnBehov {
 
     /*
         - Er det dokumentert at barnets sykdom er kronisk eller at barnet har en funksjonshemming? Ja/nei
@@ -15,7 +15,7 @@ internal object LøsKroniskSyktBarnAksjonspunkt {
         val barnetErKroniskSyktEllerHarEnFunksjonshemning: Boolean?,
         val erSammenhengMedSøkersRisikoForFraværFraArbeid: Boolean?,
         val vurdering: String
-    ) : LøstAksjonpunkt {
+    ) : LøstBehov {
         override val navn = "LEGEERKLÆRING"
         override val versjon = "0.0.1"
         override val kanInnvilges =
@@ -32,10 +32,10 @@ internal object LøsKroniskSyktBarnAksjonspunkt {
 
     internal data class Request(
         @get:JsonProperty("LEGEERKLÆRING") val LEGEERKLÆRING: Legeerklæring?) {
-        internal val løsteAksjonspunkter : Set<LøstAksjonpunkt> = setOf(LEGEERKLÆRING).filterNotNull().toSet()
+        internal val løsteBehov : Set<LøstBehov> = setOf(LEGEERKLÆRING).filterNotNull().toSet()
         init {
-            require(løsteAksjonspunkter.isNotEmpty()) {
-                "Minst ett aksjonspunt må løses."
+            require(løsteBehov.isNotEmpty()) {
+                "Minst ett behov må løses."
             }
         }
     }
